update round info page - improved jQuery

--- a/views/newScore.html
+++ b/views/newScore.html
@@ -73,48 +73,48 @@
                                                <p class='scoreHeader'>Hole</p><br>
 
                                                <!-- Hole Number 1 - 18 -->
-                                               <p>1</p>
-                                               <p>2</p>
-                                               <p>3</p>
-                                               <p>4</p>
-                                               <p>5</p>
-                                               <p>6</p>
-                                               <p>7</p>
-                                               <p>8</p>
-                                               <p>9</p>
-                                               <p>10</p>                                       
-                                               <p>11</p>
-                                               <p>12</p>
-                                               <p>13</p>
-                                               <p>14</p>
-                                               <p>15</p>
-                                               <p>16</p>
-                                               <p>17</p>
-                                               <p>18</p>
+                                               <div class='form-control'>1</div>
+                                               <div class='form-control'>2</div>
+                                               <div class='form-control'>3</div>
+                                               <div class='form-control'>4</div>
+                                               <div class='form-control'>5</div>
+                                               <div class='form-control'>6</div>
+                                               <div class='form-control'>7</div>
+                                               <div class='form-control'>8</div>
+                                               <div class='form-control'>9</div><br>
+                                               <div class='form-control'>10</div>                     
+                                               <div class='form-control'>11</div>
+                                               <div class='form-control'>12</div>
+                                               <div class='form-control'>13</div>
+                                               <div class='form-control'>14</div>
+                                               <div class='form-control'>15</div>
+                                               <div class='form-control'>16</div>
+                                               <div class='form-control'>17</div>
+                                               <div class='form-control'>18</div>
                                         </div>
 
                                         <div class='col-xs-1 col-md-1 col-lg-1'>
 
                                                 <p class='scoreHeader'>Par</p><br>
 
-                                                <!-- Par for Holes 1 - 18 -->                                                                                                                         <p id='par1'></p>
-                                                        <p id='par2'></p>                                              
-                                                        <p id='par3'></p>
-                                                        <p id='par4'></p>
-                                                        <p id='par5'></p>
-                                                        <p id='par6'></p>
-                                                        <p id='par7'></p>
-                                                        <p id='par8'></p>
-                                                        <p id='par9'></p>
-                                                        <p id='par10'></p>
-                                                        <p id='par11'></p>
-                                                        <p id='par12'></p>
-                                                        <p id='par13'></p>
-                                                        <p id='par14'></p>
-                                                        <p id='par15'></p>
-                                                        <p id='par16'></p>
-                                                        <p id='par17'></p>
-                                                        <p id='par18'></p>
+                                                <!-- Par for Holes 1 - 18 -->                                                                                       <div id='par1' class='form-control'></div>
+                                                        <div id='par2' class='form-control'></div>                                              
+                                                        <div id='par3' class='form-control'></div>
+                                                        <div id='par4' class='form-control'></div>
+                                                        <div id='par5' class='form-control'></div>
+                                                        <div id='par6' class='form-control'></div>
+                                                        <div id='par7' class='form-control'></div>
+                                                        <div id='par8' class='form-control'></div>
+                                                        <div id='par9' class='form-control'></div><br>
+                                                        <div id='par10' class='form-control'></div>
+                                                        <div id='par11' class='form-control'></div>
+                                                        <div id='par12' class='form-control'></div>
+                                                        <div id='par13' class='form-control'></div>
+                                                        <div id='par14' class='form-control'></div>
+                                                        <div id='par15' class='form-control'></div>
+                                                        <div id='par16' class='form-control'></div>
+                                                        <div id='par17' class='form-control'></div>
+                                                        <div id='par18' class='form-control'></div>
 
                                         </div>
 
@@ -131,7 +131,7 @@
                                                 <input type="number" name='score[]' id='score6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc6()'>
                                                 <input type="number" name='score[]' id='score7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc7()'>
                                                 <input type="number" name='score[]' id='score8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc8()'>
-                                                <input type="number" name='score[]' id='score9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc9()'>
+                                                <input type="number" name='score[]' id='score9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc9()'><br>
                                                 <input type="number" name='score[]' id='score10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc10()'>
                                                 <input type="number" name='score[]' id='score11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc11()'>
                                                 <input type="number" name='score[]' id='score12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc12()'>
@@ -159,7 +159,7 @@
                                                 <input type="number" name='putts[]' id='putts6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                                                 <input type="number" name='putts[]' id='putts7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                                                 <input type="number" name='putts[]' id='putts8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
-                                                <input type="number" name='putts[]' id='putts9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
+                                                <input type="number" name='putts[]' id='putts9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'><br>
                                                 <input type="number" name='putts[]' id='putts10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                                                 <input type="number" name='putts[]' id='putts11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                                                 <input type="number" name='putts[]' id='putts12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
@@ -176,25 +176,6 @@
 
                                               <p class='scoreHeader'> + / - </p><br>
 
-                                                <!-- Nett Score for 1 - 18 -->
-
-<!--                                             <p class='well well-sm' id='nett1'></p>
-                                            <p class='well well-sm' id='nett2'></p>
-                                            <p class='well well-sm' id='nett3'></p>
-                                            <p class='well well-sm' id='nett4'></p>
-                                            <p class='well well-sm' id='nett5'></p>
-                                            <p class='well well-sm' id='nett6'></p>                                 <p class='well well-sm' id='nett7'></p>
-                                            <p class='well well-sm' id='nett8'></p>                
-                                            <p class='well well-sm' id='nett9'></p>                         
-                                            <p class='well well-sm' id='nett10'></p>
-                                            <p class='well well-sm' id='nett11'></p>
-                                            <p class='well well-sm' id='nett12'></p>
-                                            <p class='well well-sm' id='nett13'></p>
-                                            <p class='well well-sm' id='nett14'></p>
-                                            <p class='well well-sm' id='nett15'></p>                                <p class='well well-sm' id='nett16'></p>
-                                            <p class='well well-sm' id='nett17'></p>
-                                            <p class='well well-sm' id='nett18'></p> -->
-
                                           <!-- Nett Score Holes 1 - 18 -->
                                                 <input type="number" name='nett[]' id='nett1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" required='true'>
                                                 <input type="number" name='nett[]' id='nett2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" required='true'>
@@ -204,7 +185,7 @@
                                                 <input type="number" name='nett[]' id='nett6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" required='true'>
                                                 <input type="number" name='nett[]' id='nett7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" required='true'>
                                                 <input type="number" name='nett[]' id='nett8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" required='true'>
-                                                <input type="number" name='nett[]' id='nett9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" required='true'><br>
                                                 <input type="number" name='nett[]' id='nett10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" required='true'>
                                                 <input type="number" name='nett[]' id='nett11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" required='true'>
                                                 <input type="number" name='nett[]' id='nett12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" required='true'>
