--- a/views/course.html
+++ b/views/course.html
@@ -8,6 +8,7 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+        <script src="/static/javascript/course.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -53,7 +54,46 @@
           </nav>
             
 
-        <h3 id='courseName'>Course Name: </h3><br>
+        <h3 id='courseName'>Course Name: </h3>
+        <h5 id='noOfRounds'>No. of Rounds: </h5>
+        <h5 id='lateGameDate'>Date of Last Round: </h5><br>       
+
+
+                <!-- RECENT SCORES TABLE -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">Performance Summary:</div>
+                        <table class="table" >
+                            <thead>
+                                <tr>
+                                    <td></td>
+                                    <td>Gross</td>
+                                    <td>Putts</td>
+                                    <td>Nett</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Best</td>
+                                    <td id='bestGross'></td>
+                                    <td id='bestPutts'></td>
+                                    <td id='bestNett'></td>
+                                </tr>
+                                <tr>
+                                    <td>Mean</td>
+                                    <td id='meanGross'></td>
+                                    <td id='meanPutts'></td>
+                                    <td id='meanNett'></td>
+                                </tr>
+                                <tr>
+                                    <td>Worst</td>
+                                    <td id='worstGross'></td>
+                                    <td id='worstPutts'></td>
+                                    <td id='worstNett'></td>
+                                </tr>                                                                    
+                            </tbody>
+                        </table>
+                    <div class="panel-footer"></div>
+                </div><br>
 
 
                 <!-- RECENT SCORES TABLE -->
@@ -71,7 +111,9 @@
                             <tbody id='rounds-placeholder'></tbody>
                         </table>
                     <div class="panel-footer"><a href="/scorelist">View All Your Scores</a></div>
-                </div>
+                </div><br>
+
+
 
 
 
@@ -93,59 +135,4 @@
                 </tr>
       </script>
 
-      <script>
 
-            // AJAX request to get course data - name, par etc. //
-            function currentUserData() {
-                var pathArray = window.location.pathname.split('/');
-                var courseID = pathArray[2];
-                var requiredGames = [];    
-
-                $.ajax({
-                        url: "/user.json",
-                        type: 'GET',
-                        datatype: 'json',
-                        success: function(data) {
-                        
-                              var parsed = JSON.parse(data);
-                              parsed.gamesList.forEach(function (game) {
-                                    if (game.course_id === courseID) {
-                                        requiredGames.push(game);
-                                              console.log('game pushed to requiredGames[]');
-                                              var roundsTemplate = _.template($('#rounds-template').html());
-                                              var roundsHtml = roundsTemplate(game);
-                                              $("#rounds-placeholder").append(roundsHtml);
-                                    } else {
-                                        console.log('wrong courseID, game not pushed');
-                                    }
-                              });
-                        }
-                });
-                console.log(requiredGames);
-            };
-
-
-            function courseData() {
-                var pathArray = window.location.pathname.split('/');
-                var courseID = pathArray[2];
-                var customURL = '/' + courseID + '.json';
-
-                $.ajax({
-                        url: customURL,
-                        type: 'GET',
-                        datatype: 'json',
-                        success: function(data) {
-                              var name = data[0].coursename;
-                              $('#courseName').append(name);
-                        }
-                });
-            }
-
-
-            $(function() {
-                currentUserData();
-                courseData();
-            });
-
-
-      </script>
