--- a/views/course.html
+++ b/views/course.html
@@ -92,7 +92,7 @@
                                 </tr>                                                                    
                             </tbody>
                         </table>
-                    <div class="panel-footer"></div>
+                    <!-- <div class="panel-footer"></div> -->
                 </div><br>
 
 
