par and yardages added to performance summary by hole

--- a/views/course.html
+++ b/views/course.html
@@ -56,9 +56,7 @@
 
         <h3 id='courseName'>Course Name: </h3>
         <h5 id='noOfRounds'>No. of Rounds: </h5>
-        <h5 id='lateGameDate'>Date of Last Round: </h5><br>       
-
-
+        <h5 id='lastGameDate'>Date of Last Round: </h5><br>       
                 <!-- RECENT SCORES TABLE -->
                 <div class="panel panel-default">
                     <div class="panel-heading">Performance Summary:</div>
@@ -94,6 +92,136 @@
                         </table>
                     <!-- <div class="panel-footer"></div> -->
                 </div><br>
+
+
+
+                <!-- RECENT SCORES TABLE -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">Performance by Hole:</div>
+                        <table class="table" >
+                            <thead>
+                                <tr>
+                                    <td>Hole</td>
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                    <td>4</td>
+                                    <td>5</td>
+                                    <td>6</td>
+                                    <td>7</td>
+                                    <td>8</td>
+                                    <td>9</td>
+                                    <td>Front 9</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Par</td>
+                                    <td id='par1'></td>
+                                    <td id='par2'></td>
+                                    <td id='par3'></td>
+                                    <td id='par4'></td>
+                                    <td id='par5'></td>
+                                    <td id='par6'></td>
+                                    <td id='par7'></td>
+                                    <td id='par8'></td>
+                                    <td id='par9'></td>
+                                    <td id='front9par'></td>                                    
+                                </tr>
+                                    <td>Yardage</td>
+                                    <td id='yardage1'></td>
+                                    <td id='yardage2'></td>
+                                    <td id='yardage3'></td>
+                                    <td id='yardage4'></td>
+                                    <td id='yardage5'></td>
+                                    <td id='yardage6'></td>
+                                    <td id='yardage7'></td>
+                                    <td id='yardage8'></td>
+                                    <td id='yardage9'></td>
+                                    <td id='front9yardage'></td>                                    
+                                </tr>
+                                <tr>
+                                    <td>Avg. Gross</td>
+                                    <td id='avgGross1'></td>
+                                    <td id='avgGross2'></td>
+                                    <td id='avgGross3'></td>
+                                    <td id='avgGross4'></td>
+                                    <td id='avgGross5'></td>
+                                    <td id='avgGross6'></td>
+                                    <td id='avgGross7'></td>
+                                    <td id='avgGross8'></td>
+                                    <td id='avgGross9'></td>
+                                    <td id='front9avgGross'></td>                                    
+                                </tr>
+                                <tr class="panel-footer">
+                                    <td></td>                                  
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>                                  
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>                                  
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>10</td>
+                                    <td>11</td>
+                                    <td>12</td>
+                                    <td>13</td>
+                                    <td>14</td>
+                                    <td>15</td>
+                                    <td>16</td>
+                                    <td>17</td>
+                                    <td>18</td>
+                                    <td>Back 9</td>
+                                </tr>
+
+                                <tr>
+                                    <td>Par</td>
+                                    <td id='par10'></td>
+                                    <td id='par11'></td>
+                                    <td id='par12'></td>
+                                    <td id='par13'></td>
+                                    <td id='par14'></td>
+                                    <td id='par15'></td>
+                                    <td id='par16'></td>
+                                    <td id='par17'></td>
+                                    <td id='par18'></td>
+                                    <td id='back9par'></td>                                    
+                                </tr>
+                                    <td>Yardage</td>
+                                    <td id='yardage10'></td>
+                                    <td id='yardage11'></td>
+                                    <td id='yardage12'></td>
+                                    <td id='yardage13'></td>
+                                    <td id='yardage14'></td>
+                                    <td id='yardage15'></td>
+                                    <td id='yardage16'></td>
+                                    <td id='yardage17'></td>
+                                    <td id='yardage18'></td>
+                                    <td id='back9yardage'></td>                                    
+                                </tr>
+                                <tr>
+                                    <td>Avg. Gross</td>
+                                    <td id='avgGross10'></td>
+                                    <td id='avgGross11'></td>
+                                    <td id='avgGross12'></td>
+                                    <td id='avgGross13'></td>
+                                    <td id='avgGross14'></td>
+                                    <td id='avgGross15'></td>
+                                    <td id='avgGross16'></td>
+                                    <td id='avgGross17'></td>
+                                    <td id='avgGross18'></td>
+                                    <td id='back9avgGross'></td>                                    
+                                </tr>                                
+                            </tbody>
+                        </table>
+                </div><br>
+
 
 
                 <!-- RECENT SCORES TABLE -->
