updated Jquery on specific course performance page - avg score / hole

--- a/views/course.html
+++ b/views/course.html
@@ -153,6 +153,19 @@
                                     <td id='avgGross9'></td>
                                     <td id='front9avgGross'></td>                                    
                                 </tr>
+                                <tr>
+                                    <td>Avg. Putts</td>
+                                    <td id='avgPutts1'></td>
+                                    <td id='avgPutts2'></td>
+                                    <td id='avgPutts3'></td>
+                                    <td id='avgPutts4'></td>
+                                    <td id='avgPutts5'></td>
+                                    <td id='avgPutts6'></td>
+                                    <td id='avgPutts7'></td>
+                                    <td id='avgPutts8'></td>
+                                    <td id='avgPutts9'></td>
+                                    <td id='front9avgPutts'></td>                                    
+                                </tr>                                
                                 <tr class="panel-footer">
                                     <td></td>                                  
                                     <td></td>
@@ -217,7 +230,20 @@
                                     <td id='avgGross17'></td>
                                     <td id='avgGross18'></td>
                                     <td id='back9avgGross'></td>                                    
-                                </tr>                                
+                                </tr>
+                                <tr>
+                                    <td>Avg. Putts</td>
+                                    <td id='avgPutts10'></td>
+                                    <td id='avgPutts11'></td>
+                                    <td id='avgPutts12'></td>
+                                    <td id='avgPutts13'></td>
+                                    <td id='avgPutts14'></td>
+                                    <td id='avgPutts15'></td>
+                                    <td id='avgPutts16'></td>
+                                    <td id='avgPutts17'></td>
+                                    <td id='avgPutts18'></td>
+                                    <td id='back9avgPutts'></td>                                    
+                                </tr>                                                                     
                             </tbody>
                         </table>
                 </div><br>
