--- a/views/course.html
+++ b/views/course.html
@@ -9,6 +9,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/course.js"></script>
+        <script src="Chart.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -248,6 +249,8 @@
                         </table>
                 </div><br>
 
+
+                <canvas id="myChart" width="400" height="400"></canvas><br>
 
 
                 <!-- RECENT SCORES TABLE -->
