--- a/views/newScore.html
+++ b/views/newScore.html
@@ -123,24 +123,24 @@
                                                <p class='scoreHeader'>Gross Score</p><br>
 
                                                 <!-- Score for Holes 1 - 9 -->
-                                                <input type="number" name='score[]' id='score1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc1()'>
-                                                <input type="number" name='score[]' id='score2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc2()'>
-                                                <input type="number" name='score[]' id='score3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc3()'>
-                                                <input type="number" name='score[]' id='score4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc4()'>
-                                                <input type="number" name='score[]' id='score5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc5()'>
-                                                <input type="number" name='score[]' id='score6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc6()'>
-                                                <input type="number" name='score[]' id='score7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc7()'>
-                                                <input type="number" name='score[]' id='score8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc8()'>
-                                                <input type="number" name='score[]' id='score9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc9()'><br>
-                                                <input type="number" name='score[]' id='score10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc10()'>
-                                                <input type="number" name='score[]' id='score11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc11()'>
-                                                <input type="number" name='score[]' id='score12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc12()'>
-                                                <input type="number" name='score[]' id='score13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc13()'>
-                                                <input type="number" name='score[]' id='score14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc14()'>
-                                                <input type="number" name='score[]' id='score15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc15()'>
-                                                <input type="number" name='score[]' id='score16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc16()'>
-                                                <input type="number" name='score[]' id='score17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc17()'>
-                                                <input type="number" name='score[]' id='score18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onclick='calc18()'>
+                                                <input type="number" name='score[]' id='score1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc1()'>
+                                                <input type="number" name='score[]' id='score2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc2()'>
+                                                <input type="number" name='score[]' id='score3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc3()'>
+                                                <input type="number" name='score[]' id='score4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc4()'>
+                                                <input type="number" name='score[]' id='score5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc5()'>
+                                                <input type="number" name='score[]' id='score6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc6()'>
+                                                <input type="number" name='score[]' id='score7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc7()'>
+                                                <input type="number" name='score[]' id='score8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc8()'>
+                                                <input type="number" name='score[]' id='score9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc9()'><br>
+                                                <input type="number" name='score[]' id='score10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc10()'>
+                                                <input type="number" name='score[]' id='score11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc11()'>
+                                                <input type="number" name='score[]' id='score12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc12()'>
+                                                <input type="number" name='score[]' id='score13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc13()'>
+                                                <input type="number" name='score[]' id='score14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc14()'>
+                                                <input type="number" name='score[]' id='score15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc15()'>
+                                                <input type="number" name='score[]' id='score16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc16()'>
+                                                <input type="number" name='score[]' id='score17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc17()'>
+                                                <input type="number" name='score[]' id='score18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true' onblur='calc18()'>
 
                                         </div>
 
