--- a/views/fullScoresList.html
+++ b/views/fullScoresList.html
@@ -78,9 +78,16 @@
       <script type="text/template" id="scores-template">
                 <tr>
 
-                    <td> <%= date %> </td>
-                    <td> <a href="/<%= course_id %><%= courseName %>"><%= courseName %> </td>
-                    <td> <a href="/<%= _id %><%= courseName %>"><%= totalScore %> </td>
+                    <td> <% var d = new Date(date), 
+                                fragments = [
+                                        d.getDate(),
+                                        d.getMonth() + 1,
+                                        d.getFullYear()
+                                ];
+                                print(fragments.join('/'));
+                     %> </td>
+                    <td> <a href="/performances/<%= course_id %>"><%= courseName %> </td>
+                    <td> <a href="/performance/<%= _id %>"><%= totalScore %> </td>
                     <td> <%= totalPutts %> </td>
                     <td> <div class="btn-group btn-group-xs close" role="group" aria-label="..." onclick='deleteScore(this)' data-id=<%= _id %> >X</div> </td>
 
