--- a/views/profile.html
+++ b/views/profile.html
@@ -130,11 +130,24 @@
 </html>
 
 
-    <!-- Recent Scores Template -->
-      <script type="text/template" id="scores-template">
-                <tr>
 
-                    <td> <%= date %> </td>
+      <script>
+
+      </script>
+
+
+      <!-- Recent Scores Template -->
+      <script type="text/template" id="scores-template">
+                
+                <tr>
+                    <td> <% var d = new Date(date), 
+                                fragments = [
+                                        d.getDate(),
+                                        d.getMonth() + 1,
+                                        d.getFullYear()
+                                ];
+                                print(fragments.join('/'));
+                     %> </td>
                     <td> <a href="/performances/<%= course_id %>"><%= courseName %> </td>
                     <td> <a href="/performance/<%= _id %>"><%= totalScore %> </td>
                     <td> <%= totalPutts %> </td>
